[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://KeySelectSplash.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
tests_paths = [ NodePath("HBoxContainer/Status/UP/ColorRect"), NodePath("HBoxContainer/Status/DOWN/ColorRect"), NodePath("HBoxContainer/Status/LEFT/ColorRect"), NodePath("HBoxContainer/Status/RIGHT/ColorRect"), NodePath("HBoxContainer/Status/ACTION/ColorRect") ]
labels_paths = [ NodePath("HBoxContainer/Editable/CenterContainer0/Label"), NodePath("HBoxContainer/Editable/CenterContainer1/Label"), NodePath("HBoxContainer/Editable/CenterContainer2/Label"), NodePath("HBoxContainer/Editable/CenterContainer3/Label"), NodePath("HBoxContainer/Editable/CenterContainer4/Label") ]

[node name="BackgroundPanel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -414.5
margin_top = -232.0
margin_right = 414.5
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 162.0
margin_bottom = 464.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Names"]
margin_right = 162.0
margin_bottom = 74.0
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer/Names"]
margin_top = 78.0
margin_right = 162.0
margin_bottom = 152.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Names/CenterContainer2"]
margin_left = 72.0
margin_top = 30.0
margin_right = 90.0
margin_bottom = 44.0
text = "UP"

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer/Names"]
margin_top = 156.0
margin_right = 162.0
margin_bottom = 230.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Names/CenterContainer3"]
margin_left = 59.0
margin_top = 30.0
margin_right = 103.0
margin_bottom = 44.0
text = "DOWN"

[node name="CenterContainer4" type="CenterContainer" parent="HBoxContainer/Names"]
margin_top = 234.0
margin_right = 162.0
margin_bottom = 308.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Names/CenterContainer4"]
margin_left = 67.0
margin_top = 30.0
margin_right = 95.0
margin_bottom = 44.0
text = "LEFT"

[node name="CenterContainer5" type="CenterContainer" parent="HBoxContainer/Names"]
margin_top = 312.0
margin_right = 162.0
margin_bottom = 386.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Names/CenterContainer5"]
margin_left = 61.0
margin_top = 30.0
margin_right = 101.0
margin_bottom = 44.0
text = "RIGHT"

[node name="CenterContainer6" type="CenterContainer" parent="HBoxContainer/Names"]
margin_top = 390.0
margin_right = 162.0
margin_bottom = 464.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Names/CenterContainer6"]
margin_left = 56.0
margin_top = 30.0
margin_right = 106.0
margin_bottom = 44.0
text = "ACTION"

[node name="Default" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 166.0
margin_right = 329.0
margin_bottom = 464.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Default"]
margin_right = 163.0
margin_bottom = 74.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Default/CenterContainer"]
margin_left = 53.0
margin_top = 30.0
margin_right = 110.0
margin_bottom = 44.0
text = "DEFAULT"

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer/Default"]
margin_top = 78.0
margin_right = 163.0
margin_bottom = 152.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Default/CenterContainer2"]
margin_left = 72.0
margin_top = 30.0
margin_right = 90.0
margin_bottom = 44.0
text = "UP"

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer/Default"]
margin_top = 156.0
margin_right = 163.0
margin_bottom = 230.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Default/CenterContainer3"]
margin_left = 59.0
margin_top = 30.0
margin_right = 103.0
margin_bottom = 44.0
text = "DOWN"

[node name="CenterContainer4" type="CenterContainer" parent="HBoxContainer/Default"]
margin_top = 234.0
margin_right = 163.0
margin_bottom = 308.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Default/CenterContainer4"]
margin_left = 67.0
margin_top = 30.0
margin_right = 95.0
margin_bottom = 44.0
text = "LEFT"

[node name="CenterContainer5" type="CenterContainer" parent="HBoxContainer/Default"]
margin_top = 312.0
margin_right = 163.0
margin_bottom = 386.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Default/CenterContainer5"]
margin_left = 61.0
margin_top = 30.0
margin_right = 101.0
margin_bottom = 44.0
text = "RIGHT"

[node name="CenterContainer6" type="CenterContainer" parent="HBoxContainer/Default"]
margin_top = 390.0
margin_right = 163.0
margin_bottom = 464.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Default/CenterContainer6"]
margin_left = 62.0
margin_top = 30.0
margin_right = 101.0
margin_bottom = 44.0
text = "SPACE"

[node name="Editable" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 333.0
margin_right = 495.0
margin_bottom = 464.0
size_flags_horizontal = 3

[node name="Label" type="CenterContainer" parent="HBoxContainer/Editable"]
margin_right = 162.0
margin_bottom = 74.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Editable/Label"]
margin_left = 53.0
margin_top = 30.0
margin_right = 108.0
margin_bottom = 44.0
text = "CUSTOM"

[node name="CenterContainer0" type="CenterContainer" parent="HBoxContainer/Editable"]
margin_top = 78.0
margin_right = 162.0
margin_bottom = 152.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Editable/CenterContainer0"]
margin_left = 78.0
margin_top = 30.0
margin_right = 83.0
margin_bottom = 44.0
text = "-"

[node name="CenterContainer1" type="CenterContainer" parent="HBoxContainer/Editable"]
margin_top = 156.0
margin_right = 162.0
margin_bottom = 230.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Editable/CenterContainer1"]
margin_left = 78.0
margin_top = 30.0
margin_right = 83.0
margin_bottom = 44.0
text = "-"

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer/Editable"]
margin_top = 234.0
margin_right = 162.0
margin_bottom = 308.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Editable/CenterContainer2"]
margin_left = 78.0
margin_top = 30.0
margin_right = 83.0
margin_bottom = 44.0
text = "-"

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer/Editable"]
margin_top = 312.0
margin_right = 162.0
margin_bottom = 386.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Editable/CenterContainer3"]
margin_left = 78.0
margin_top = 30.0
margin_right = 83.0
margin_bottom = 44.0
text = "-"

[node name="CenterContainer4" type="CenterContainer" parent="HBoxContainer/Editable"]
margin_top = 390.0
margin_right = 162.0
margin_bottom = 464.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Editable/CenterContainer4"]
margin_left = 78.0
margin_top = 30.0
margin_right = 83.0
margin_bottom = 44.0
text = "-"

[node name="Status" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 499.0
margin_right = 662.0
margin_bottom = 464.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Status"]
margin_right = 163.0
margin_bottom = 74.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Status/CenterContainer"]
margin_left = 67.0
margin_top = 30.0
margin_right = 95.0
margin_bottom = 44.0
text = "TEST"

[node name="UP" type="CenterContainer" parent="HBoxContainer/Status"]
margin_top = 78.0
margin_right = 163.0
margin_bottom = 152.0
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Status/UP"]
margin_left = 56.0
margin_top = 27.0
margin_right = 106.0
margin_bottom = 47.0
rect_min_size = Vector2( 50, 20 )
color = Color( 1, 0, 0, 1 )

[node name="DOWN" type="CenterContainer" parent="HBoxContainer/Status"]
margin_top = 156.0
margin_right = 163.0
margin_bottom = 230.0
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Status/DOWN"]
margin_left = 56.0
margin_top = 27.0
margin_right = 106.0
margin_bottom = 47.0
rect_min_size = Vector2( 50, 20 )
color = Color( 1, 0, 0, 1 )

[node name="LEFT" type="CenterContainer" parent="HBoxContainer/Status"]
margin_top = 234.0
margin_right = 163.0
margin_bottom = 308.0
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Status/LEFT"]
margin_left = 56.0
margin_top = 27.0
margin_right = 106.0
margin_bottom = 47.0
rect_min_size = Vector2( 50, 20 )
color = Color( 1, 0, 0, 1 )

[node name="RIGHT" type="CenterContainer" parent="HBoxContainer/Status"]
margin_top = 312.0
margin_right = 163.0
margin_bottom = 386.0
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Status/RIGHT"]
margin_left = 56.0
margin_top = 27.0
margin_right = 106.0
margin_bottom = 47.0
rect_min_size = Vector2( 50, 20 )
color = Color( 1, 0, 0, 1 )

[node name="ACTION" type="CenterContainer" parent="HBoxContainer/Status"]
margin_top = 390.0
margin_right = 163.0
margin_bottom = 464.0
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Status/ACTION"]
margin_left = 56.0
margin_top = 27.0
margin_right = 106.0
margin_bottom = 47.0
rect_min_size = Vector2( 50, 20 )
color = Color( 1, 0, 0, 1 )

[node name="VBoxContainer5" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 666.0
margin_right = 829.0
margin_bottom = 464.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer5"]
margin_right = 163.0
margin_bottom = 152.0
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer5/CenterContainer"]
margin_left = 6.0
margin_top = 46.0
margin_right = 156.0
margin_bottom = 106.0
rect_min_size = Vector2( 150, 60 )
text = "Set custom keys"

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer/VBoxContainer5"]
margin_top = 156.0
margin_right = 163.0
margin_bottom = 308.0
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer5/CenterContainer2"]
margin_left = 6.0
margin_top = 46.0
margin_right = 156.0
margin_bottom = 106.0
rect_min_size = Vector2( 150, 60 )
text = "Clear custom keys"

[node name="CenterContainer3" type="CenterContainer" parent="HBoxContainer/VBoxContainer5"]
margin_top = 312.0
margin_right = 163.0
margin_bottom = 464.0
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer5/CenterContainer3"]
margin_left = 6.0
margin_top = 46.0
margin_right = 156.0
margin_bottom = 106.0
rect_min_size = Vector2( 150, 60 )
text = "Save custom keys"

[node name="KeySelectSplash" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.741176 )
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="KeySelectSplash"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="KeySelectSplash/CenterContainer"]
modulate = Color( 0, 0.552941, 1, 1 )
margin_left = 436.0
margin_top = 293.0
margin_right = 587.0
margin_bottom = 307.0

[node name="Static" type="Label" parent="KeySelectSplash/CenterContainer/HBoxContainer"]
margin_right = 69.0
margin_bottom = 14.0
text = "Press key: "

[node name="Button" type="Label" parent="KeySelectSplash/CenterContainer/HBoxContainer"]
margin_left = 73.0
margin_right = 151.0
margin_bottom = 14.0
text = "sample_text"
